--- a/src/TemplateCoreMaterial/Views/Shared/_LayoutWithoutNavigation.cshtml
+++ b/src/TemplateCoreMaterial/Views/Shared/_LayoutWithoutNavigation.cshtml
@@ -11,9 +11,9 @@
   <meta charset="utf-8" />
 
   <!-- To render mobile devices -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  @*<meta name="viewport" content="width=device-width, initial-scale=1.0" />*@
 
-  <title>@ViewData["Title"] - TemplateCore</title>
+  <title>@ViewData["Title"] - TemplateCoreMaterial</title>
 
   <environment names="Development">
     @*<link rel="stylesheet" href="~/css/site.css" />*@
