validations while creating users and minor changes.

--- a/src/TemplateCoreMaterial/Views/Shared/_Layout.cshtml
+++ b/src/TemplateCoreMaterial/Views/Shared/_Layout.cshtml
@@ -73,10 +73,10 @@
         @RenderBody()
       </div>
     </main>
-    <div id="snackbar" class="mdl-js-snackbar mdl-snackbar">
+    @*<div id="snackbar" class="mdl-js-snackbar mdl-snackbar">
       <div class="mdl-snackbar__text"></div>
       <button class="mdl-snackbar__action" type="button"></button>
-    </div>
+    </div>*@
     @*<footer class="mdl-mini-footer">
         @await Html.PartialAsync("_Footer")
       </footer>*@
